my-cluster-backup/validatingwebhookconfiguration-azure-policy-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1beta1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{},"labels":{"addonmanager.kubernetes.io/mode":"Reconcile"},"name":"azure-policy-validating-webhook-configuration"},"webhooks":[{"clientConfig":{"caBundle":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZBVENDQXVtZ0F3SUJBZ0lSQUpuelJ3SmtDYlh5THFRZS9FZHZXM0l3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT1lYcDFjbVZ3YjJ4cFkza3RZMkV3SUJjTk1qRXdNekV4TURVd05EQTNXaGdQTWpBMQpNVEF6TV [...]
  creationTimestamp: "2021-03-11T05:15:02Z"
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"byovalidation.policy.azure.com"}:
          f:namespaceSelector:
            f:matchExpressions: {}
    manager: admissionsenforcer
    operation: Update
    time: "2021-03-11T05:15:02Z"
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:addonmanager.kubernetes.io/mode: {}
      f:webhooks:
        .: {}
        k:{"name":"byovalidation.policy.azure.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: kubectl
    operation: Update
    time: "2021-03-11T05:15:02Z"
  name: azure-policy-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZBVENDQXVtZ0F3SUJBZ0lSQUpuelJ3SmtDYlh5THFRZS9FZHZXM0l3RFFZSktvWklodmNOQVFFTEJRQXcKR1RFWE1CVUdBMVVFQXhNT1lYcDFjbVZ3YjJ4cFkza3RZMkV3SUJjTk1qRXdNekV4TURVd05EQTNXaGdQTWpBMQpNVEF6TVRFd05URTBNRGRhTUJreEZ6QVZCZ05WQkFNVERtRjZkWEpsY0c5c2FXTjVMV05oTUlJQ0lqQU5CZ2txCmhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBd0twcUdoSEdRN1hPcFZCeWh6Q3pnTk4vNDVTd3c0YmYKelQ3aVdhK1FuY2NrcFl1R01zRUhOUjh3T05FSFR6Y1U0WUR5WVJFRU9GaXNJUTRQKzYrM25sS1FNMmZKVzFXSQp4YTRxSmlkZnREOW [...]
    service:
      name: azure-policy-webhook-service
      namespace: kube-system
      path: /validategatekeeperresources
      port: 443
  failurePolicy: Ignore
  matchPolicy: Exact
  name: byovalidation.policy.azure.com
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - templates.gatekeeper.sh
    - constraints.gatekeeper.sh
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 5
